# llenergymeasure

./: .env.example  .gitignore  .libcst.codemod.yaml  .planning  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DELETE.ipynb  Makefile  README.md  TODO-MISCELLANEOUS.md  docker-compose.yml  model.cache  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.devcontainer/tensorrt/: devcontainer.json
.devcontainer/vllm/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design-question.yml  enhancement.yml  refactor.yml
.github/workflows/: auto-mine.yml  auto-release.yml  ci-backfill.yml  ci.yml  config-rules-refresh.yml  docker-build-check.yml  docker-publish.yml  gpu-ci.yml  invariant-miner.yml  parameter-discovery.yml  release.yml  schema-refresh.yml  security.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.9.0-MILESTONE-AUDIT.md
.planning/phases/18-docker-pre-flight/: 18-VERIFICATION.md
.planning/phases/19-vllm-backend-activation/: 19-01-PLAN.md  19-01-SUMMARY.md  19-02-PLAN.md  19-02-SUMMARY.md  19-CONTEXT.md  19-RESEARCH.md  19-VERIFICATION.md
.planning/phases/19.1-vllm-parameter-audit/: 19.1-01-PLAN.md  19.1-01-SUMMARY.md  19.1-02-PLAN.md  19.1-02-SUMMARY.md  19.1-CONTEXT.md  19.1-RESEARCH.md  19.1-VERIFICATION.md
.planning/phases/19.2-vllm-extended-parameters-and-passthrough/: 19.2-RESEARCH.md  19.2-VERIFICATION.md
.planning/phases/20-docker-image-and-ci/: 20-01-PLAN.md  20-01-SUMMARY.md  20-02-PLAN.md  20-02-SUMMARY.md  20-CONTEXT.md  20-RESEARCH.md  20-VERIFICATION.md
.planning/phases/21-measurement-carried-items/: 21-01-PLAN.md  21-01-SUMMARY.md  21-02-PLAN.md  21-02-SUMMARY.md  (+3 more)
.product/designs/: sweep-constraints.md
.product/research/: package-structure-peer-review.md
configs/: README.md  example-study-full.yaml  test.yaml
configs/examples/: experiment-advanced.yaml  experiment-pytorch.yaml  experiment-tensorrt.yaml  experiment-vllm.yaml  study-docker-test.yaml  study-full-suite.yaml  study-multi-backend.yaml  study-pytorch.yaml  study-realistic.yaml  study-reference.yaml  study-tensorrt-quant-sweep.yaml  study-tensorrt-standalone.yaml  study-tensorrt.yaml  study-vllm.yaml
configs/validation_rules/: README.md  tensorrt.yaml  transformers.yaml  vllm.yaml
docker/: Dockerfile.base  Dockerfile.pytorch  Dockerfile.tensorrt  Dockerfile.transformers  Dockerfile.vllm  buildkitd.toml
docs/: architecture-overview.md  backends.md  cli-reference.md  deployment.md  docker-setup.md  energy-measurement.md  engines.md  extending-miners.md  getting-started.md  guide-comparison-context.md  guide-getting-started.md  guide-interpreting-results.md  guide-what-we-measure.md  installation.md  methodology.md  miner-pipeline.md  parameter-curation.md  parameter-discovery.md  research-context.md  schema-refresh.md  study-config.md  troubleshooting.md  validation-rule-corpus.md
examples/: experiment-pytorch.yaml  experiment-tensorrt.yaml  experiment-vllm.yaml  study-cross-backend.yaml  study-docker-test.yaml  study-realistic.yaml  study-reference.yaml  study-tensorrt-quant-sweep.yaml
scripts/: __init__.py  _vendor_common.py  backfill-ci.sh  benchmark_docker_builds.sh  check_discovered_schema_versions.py  check_pydantic_matches_discovered.py  check_schema_versions.py  compute_expconf_fingerprint.py  diff_discovered_schemas.py  diff_rules.py  diff_schemas.py  diff_validation_rules.py  discover_engine_schemas.py  docker_build_with_cache_report.sh  generate_aienergyscore_dataset.py  generate_cli_reference.py  generate_config_docs.py  generate_curation_doc.py  generate_invalid_combos_doc.py  generate_param_matrix.py  probe_ast_scan_poc.py  probe_c_trt.py  probe_canonicaliser_shuffle.py  probe_cardinality_analysis.py  probe_create_engine_config_gpu.py  probe_extract_effective_params.py  probe_h3_collision_invariant.py  probe_h3r_yaml_quality.py  probe_hf_validate_introspection.py  probe_latency_analysis.py  probe_raw_canary_poc.py  probe_runtime_warning_capture_v2.py  probe_subprocess_crash_jsonl.py  probe_synthetic_poc.py  probe_t15_poc.py  probe_t15_synthetic.py  probe_t3_canary_poc.py  probe_trt_stdout_silence.py  probe_validation_poc.py  probe_validator_retirement_map.py  (+20 more)
scripts/canaries/: canary_tensorrt.py  canary_transformers.py  canary_transformers_raw.py  canary_vllm.py
scripts/extractors/: __init__.py  _base.py  build_corpus.py  tensorrt_ast_extractor.py  tensorrt_introspection_extractor.py  transformers_ast_extractor.py  transformers_extractor.py  transformers_introspection_extractor.py  vllm_ast_extractor.py  vllm_introspection_extractor.py
scripts/miners/: __init__.py  _base.py  _dataclass_lift.py  _fixpoint_test.py  _msgspec_lift.py  _pydantic_lift.py  build_corpus.py  tensorrt_miner.py  tensorrt_static_miner.py  transformers_dynamic_miner.py  transformers_miner.py  transformers_static_miner.py  vllm_dynamic_miner.py  vllm_miner.py  vllm_static_miner.py
scripts/walkers/: __init__.py  _base.py  _fixpoint_test.py  build_corpus.py  tensorrt_ast.py  tensorrt_introspection.py  transformers.py  transformers_ast.py  transformers_introspection.py  vllm_ast.py  vllm_introspection.py
src/llenergymeasure/: README.md  __init__.py  _api.py  _version.py
tests/: CLAUDE.md  README.md  conftest.py  fakes.py
tests/fixtures/: killpg_vllm_study.yaml  llama-7b-config.json  sigint_study.yaml
tests/helpers/: runtime_obs.py
tests/integration/: killpg_verify.sh  sigint_verify.sh  test_config_load_vendored_rules.py  test_config_rules_refresh_workflow.py  test_docker_runner.py  test_e2e_pipeline.py  test_feedback_loop_end_to_end.py  test_gpu_experiment.py  test_invariant_miner_workflow.py  test_sweep_dedup_end_to_end.py
tests/unit/: test_aggregation_v2.py  test_api.py  test_backend_protocol.py  test_config_schema.py  test_datasets.py  test_exceptions.py  test_experiment_result_v2.py  test_image_registry.py  test_peak_memory.py  test_persistence_v2.py  test_preflight.py  test_protocols.py  test_replay_fixtures.py  test_runner_resolution.py  test_state_machine.py  test_vllm_backend.py
(+350 files in other folders)
