[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llenergymeasure"
version = "0.9.0"
description = "LLenergyMeasure - LLM inference efficiency measurement framework"
authors = [
    {name = "henrycgbaker", email = "henry.c.g.baker@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "platformdirs>=3.0",
    "nvidia-ml-py>=12.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.5",
    "transformers>=4.49",
    "accelerate>=1.4",
    "bitsandbytes>=0.45",
    "calflops>=0.2",
]
vllm = ["vllm>=0.6"]
tensorrt = ["tensorrt-llm>=0.12"]
zeus = ["zeus>=0.13.1"]
codecarbon = ["codecarbon>=2.8"]

[dependency-groups]
dev = [
    "llenergymeasure[pytorch]",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.8.0",
    "pytest-randomly>=3.15",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-pyyaml>=6.0.12",
    "import-linter>=2.9",
]

[project.scripts]
llem = "llenergymeasure.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llenergymeasure"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# Disable checks that fail on untyped third-party libs (torch, transformers)
disallow_untyped_calls = false
# Allow unused type: ignore comments (needed for cross-environment compatibility)
warn_unused_ignores = false
exclude = []

[[tool.mypy.overrides]]
module = "transformers.*"
# transformers re-exports (AutoConfig, AutoTokenizer, etc.) are not explicitly
# typed in their __init__.py stubs, causing attr-defined errors.
no_implicit_reexport = false

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

[tool.uv]
# vllm and tensorrt pin incompatible torch versions — mark as mutually exclusive extras
conflicts = [
    [
        { extra = "vllm" },
        { extra = "tensorrt" },
    ],
]
# tensorrt-llm and some vllm transitive deps exist on both nvidia and pypi indexes;
# unsafe-best-match allows uv to pick the best version across all registered indexes
index-strategy = "unsafe-best-match"
override-dependencies = [
    "flashinfer @ git+https://github.com/flashinfer-ai/flashinfer.git@06309c4e",
    "s2wrapper @ git+https://github.com/bfshi/scaling_on_scales.git@60da2afe",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m \"not gpu and not docker\""
markers = [
    "gpu: marks tests as requiring GPU hardware (deselect with '-m \"not gpu\"')",
    "docker: marks tests as requiring Docker with NVIDIA runtime",
    "slow: marks tests as slow (>30s); excluded from Tier 1 fast runs",
]

[tool.coverage.run]
source = ["llenergymeasure"]
omit = [
    "*/backends/vllm.py",
    "*/backends/tensorrt.py",
    "*/infra/docker_runner.py",
    "*/entrypoints/container.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

[tool.importlinter]
root_packages = ["llenergymeasure"]
include_external_packages = false
exclude_type_checking_imports = true
unmatched_ignore_imports_alerting = "warn"

[[tool.importlinter.contracts]]
id = "main-layers"
name = "Main architectural layers"
type = "layers"
layers = [
    "llenergymeasure.cli | llenergymeasure.entrypoints",
    "llenergymeasure.api",
    "llenergymeasure.study",
    "llenergymeasure.harness | llenergymeasure.results",
    "llenergymeasure.backends | llenergymeasure.energy | llenergymeasure.datasets",
    "llenergymeasure.infra",
    "llenergymeasure.device",
    "llenergymeasure.config | llenergymeasure.domain",
    "llenergymeasure.utils",
]

[[tool.importlinter.contracts]]
id = "cli-boundary"
name = "CLI must not directly import harness or infrastructure"
type = "forbidden"
source_modules = ["llenergymeasure.cli"]
forbidden_modules = [
    "llenergymeasure.harness",
    "llenergymeasure.backends",
    "llenergymeasure.energy",
    "llenergymeasure.infra",
    "llenergymeasure.study",
    "llenergymeasure.results",
    "llenergymeasure.datasets",
    "llenergymeasure.entrypoints",
]
allow_indirect_imports = true
# No ignore_imports needed.
# CLI imports from llenergymeasure.api (Layer 7) which internally reaches harness/backends.
# allow_indirect_imports = true means only DIRECT imports are forbidden.
# cli/run.py uses `from llenergymeasure.api import run_experiment` and
# `from llenergymeasure import run_study` (root re-export); no direct lower-layer imports.
# cli/__init__.py uses _version.py directly (no root import).

[[tool.importlinter.contracts]]
id = "foundation-independence"
name = "Config, domain, device, utils must not import upper layers"
type = "forbidden"
source_modules = [
    "llenergymeasure.config",
    "llenergymeasure.domain",
    "llenergymeasure.device",
    "llenergymeasure.utils",
]
forbidden_modules = [
    "llenergymeasure.cli",
    "llenergymeasure.entrypoints",
    "llenergymeasure.api",
    "llenergymeasure.study",
    "llenergymeasure.harness",
    "llenergymeasure.backends",
    "llenergymeasure.energy",
    "llenergymeasure.infra",
    "llenergymeasure.results",
    "llenergymeasure.datasets",
]
# No ignore_imports needed - all violations from Phase 38 have been resolved in Phase 39.
